# stt-prompt

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
src/voice_dictation/: __init__.py  cli.py  config.py  core.py  hotkey_service.py  setup_autostart.py
