[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stt-prompt"
version = "1.0.0"
description = "Speak instead of typing! Convert voice to text anywhere - AI chatbots, messaging apps, social media, emails, documents. Press hotkey, speak, text appears at cursor."
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Zun", email = "zunxbt@gmail.com"}
]
requires-python = ">=3.9"
keywords = ["stt", "speech-to-text", "voice", "dictation", "transcription", "whisper", "chatgpt", "ai-prompt"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]
dependencies = [
    "sounddevice>=0.4.6",
    "numpy>=1.20.0,<2.3.0",
    "pynput>=1.7.6",
    "pyperclip>=1.8.0",
    "pystray>=0.19.0",
    "Pillow>=9.0.0",
    "curl_cffi>=0.5.0",
]

[project.optional-dependencies]
dev = ["build", "twine"]

[project.scripts]
dictate = "voice_dictation.cli:main"
chatgpt-auth = "voice_dictation.cli:auth"
chatgpt-auth-status = "voice_dictation.cli:auth_status"
chatgpt-auth-delete = "voice_dictation.cli:auth_delete"
dictate-hotkey-install = "voice_dictation.setup_autostart:install_cmd"
dictate-hotkey-status = "voice_dictation.setup_autostart:status_cmd"
dictate-hotkey-uninstall = "voice_dictation.setup_autostart:uninstall_cmd"
dictate-hotkey = "voice_dictation.hotkey_service:main"

[project.urls]
Homepage = "https://github.com/zunmax/stt-prompt"
Issues = "https://github.com/zunmax/stt-prompt/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
voice_dictation = ["py.typed"]
